--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+body {
+	background-color: #0e1113;
+}
+
+p,
+a,
+b,
+i,
+h6,
+h5,
+h4,
+h3,
+h2,
+h1 {
+	color: rgb(246, 240, 240);
+	text-decoration-color: rgb(246, 240, 240);
+}
